--- a/src/App.less
+++ b/src/App.less
@@ -26,6 +26,14 @@
     margin: 0 20px;
 }
 
+.margin-top-20 {
+    margin-top: 20px;
+}
+
+.margin-bottom-20 {
+    margin-bottom: 20px;
+}
+
 @keyframes App-logo-spin {
     from {
         transform: rotate(0deg);
